--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "remark-gfm": "^4.0.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-unicode11": "^0.6.0",
+    "xterm-addon-webgl": "^0.16.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
