--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@tauri-apps/plugin-fs": "^2.0.0",
     "@tauri-apps/plugin-notification": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.0",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/addon-unicode11": "^0.9.0",
+    "@xterm/addon-webgl": "^0.19.0",
+    "@xterm/xterm": "6.0.0",
     "diff2html": "^3.4.52",
     "lucide-react": "^0.400.0",
     "react": "^19.0.0",
@@ -26,10 +30,6 @@
     "react-resizable-panels": "^2.1.4",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-unicode11": "^0.6.0",
-    "xterm-addon-webgl": "^0.16.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
