--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "tsc --noEmit",
+    "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build"
@@ -23,7 +24,10 @@
     "@xterm/addon-webgl": "^0.19.0",
     "@xterm/xterm": "6.0.0",
     "diff2html": "^3.4.52",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.400.0",
+    "micromark": "^4.0.2",
+    "micromark-extension-gfm": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.0",
@@ -39,6 +43,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.5.0",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vitest": "^3.2.4"
   }
 }
