chore: update project docs

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ src-tauri/gen/
 # Generated icon PNGs (regenerate from app-icon.svg)
 app-icon.png
 app-icon-1024.png
+
+# Local docs that should not be versioned
+AGENTS.md
+CLAUDE.md
+PERFORMANCE_PLANO.md
