chore: update cache rules for lp

--- a/landing-page/vercel.json
+++ b/landing-page/vercel.json
@@ -19,7 +19,7 @@
     {
       "source": "/logo.svg",
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+        { "key": "Cache-Control", "value": "public, max-age=3600, must-revalidate" }
       ]
     }
   ]
